...
        <ImageCarousel
          images={images}
          backgroundColor={colors.imagePlaceholder}
          overlay={
            <View style={styles.favoriteWrapper}>
              <FavoriteButton
                testID="favorite-btn-details"
                isFavorite={isFavorite(product.id)}
                onPress={() => toggleFavorite(product.id)}
              />
            </View>
          }
        />
...
